2007-06-26  Michael Natterer  <mitch@gimp.org>

	Invalidate the image preview after the projection is
	completely constructed. Fixes bug #449141.

	* app/core/gimpmarshal.list: add VOID:BOOLEAN

	* app/core/gimpimage.[ch]: add boolean parameter
	invalidate_preview to the "flush" signal.

	* app/core/gimpprojection.[ch]: add boolean member
	invalidate_preview to the GimpProjection struct. Set it to TRUE if
	it was TRUE in the image's "flush" signal. When the projection is
	completely constructed after a flush, invalidate the image's
	preview.

	* app/display/gimpdisplay-handlers.c
	* app/widgets/gimpitemtreeview.c
	* app/widgets/gimpimagedock.c
	* app/widgets/gimpimageeditor.c: changed callback signatures
	accordingly.

2007-06-26  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpimageprofileview.c (gimp_image_profile_view_query):
	use the name if the description is empty.

2007-06-26  Sven Neumann  <sven@gimp.org>

	* app/tools/gimplevelstool.c: unset the active color picker when
	the dialog is unmapped. Fixes bug #451272.

	* app/tools/gimpimagemaptool.c: formatting.

2007-06-26  Sven Neumann  <sven@gimp.org>

	* app/dialogs/image-properties-dialog.c
	* app/widgets/gimpimageprofileview.[ch]: show comment and color
	profile in text views instead of using labels. Deals much better
	with longer texts.

2007-06-26  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpimagepropview.c
	(gimp_image_prop_view_label_set_filename): set the full name as
	tooltip.

2007-06-25  Sven Neumann  <sven@gimp.org>

	* app/core/gimp-transform-resize.c: applied patch from Geert
	Jordaens that reimplements the algorithm to determine the largest
	rectangle. Fixes bug #412473.

2007-06-25  Sven Neumann  <sven@gimp.org>

	* configure.in: removed extra check for gthread and fold it into
	the GLIB and GTK checks.

	* */Makefile.am: changed accordingly.

	* app/main.c (main): always call g_thread_init().

2007-06-25  Sven Neumann  <sven@gimp.org>
