@@ -124,6 +124,9 @@ image_comment_view_new (GimpImage *image)
   gtk_widget_show (scrolled_window);
 
   text_view = gtk_text_view_new ();
+  gtk_text_view_set_pixels_above_lines (GTK_TEXT_VIEW (text_view), 6);
+  gtk_text_view_set_left_margin (GTK_TEXT_VIEW (text_view), 6);
+  gtk_text_view_set_right_margin (GTK_TEXT_VIEW (text_view), 6);
   gtk_text_view_set_editable (GTK_TEXT_VIEW (text_view), FALSE);
   gtk_container_add (GTK_CONTAINER (scrolled_window), text_view);
   gtk_widget_show (text_view);
